--- a/2024/2024-09-29.md
+++ b/2024/2024-09-29.md
@@ -83,9 +83,12 @@ Some leftovers from last week...
 
 - tk ([]())
 - tk ([]())
-- tk ([]())
-- tk ([]())
-- tk ([]())
+
+- The death of Peter Thiel's boyfriend is being investigated as a suicide by Miami police. ([The Intercept]()) <!-- Link TK -->
+
+- Bloomberg Crypto ([](https://www.youtube.com/results?search_query=bloomberg+crypto&sp=EgIIAg%253D%253D))
+
+- **Imagine being a fly on the wall for *that*.** Puffy and SBF are being held in the same Brooklyn lockup. ([New York Times]()) <!-- Pickup link from Google News -->
 
 ### Community
 
