--- a/2024/2024-09-22.md
+++ b/2024/2024-09-22.md
@@ -1,7 +1,7 @@
 # Sell, Elon. Sell.
 ## Chaos at Twitter/X is a bigger problem than any its self-appointed savior was supposed to solve in the first place. The solution is obvious.
 
-![Bluebird apparently "pointing " with his wing, telling another bluebird to GTFO.](https://images.unsplash.com/photo-1650423621016-4e3b97a8d37f?q=80&w=3270&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
+![Bluebird apparently "pointing " with his wing, telling another bluebird to GTFO.](https://blog.pmckay.com/img/dulcey-lima-2700.jpg)
 *Photo courtesy by Dulcey Lima via Unsplash*
 
 **Turns out it's really bad for business** for a tech CEO to repeatedly [alienate](https://www.nbcnews.com/tech/elon-musk-black-twitter-influencers-hate-speech-rcna59474) users, file [frivolous lawsuits](https://www.nbcnews.com/tech/tech-news/elon-musk-x-twitter-ccdh-lawsuit-rcna144960), arbitrarily [dump a brand name](https://www.forbes.com/sites/marcuscollins/2023/07/30/the-real-lesson-to-be-learned-from-twitters-rebrand/) so recognizable it's turned into a widely used verb, regularly respond [with poop emojis](https://mashable.com/article/twitter-press-poop-emoji) to press inquiries as a PR "strategy," consume psychedelic drugs so much that his board members leak their concerns [to the Wall Street Journal](https://www.wsj.com/business/elon-musk-illegal-drugs-e826a9e1?st=qxMiDo&reflink=desktopwebshare_permalink), openly [muse](https://www.msn.com/en-us/news/other/secret-service-is-investigating-elon-musk-s-biden-kamala-assassination-tweet/ar-AA1qR5Q4) about potential assassination of a sitting U.S. president, and tell advertisers to [go f#@!* themselves](https://www.theverge.com/2023/11/29/23981928/elon-musk-ad-boycott-go-fuck-yourself-destroy-x).
@@ -24,7 +24,7 @@ The week also saw a tantilizing, if unlikely, escape option emerge from a differ
 
 (Cuban also said he would buy Fox News --  an institution that has had its own share of [toxic drama](https://www.reuters.com/legal/dominions-defamation-case-against-fox-poised-trial-after-delay-2023-04-18/) the last few years -- "in a heartbeat." But he estimates the price tag would be way too rich for even his pocketbook.)
 
-The interview also makes clear that Cuban is plenty busy these days with a project completely unrelated to any form of media. He's started company that sells prescription drugs at prices that sharply undercut the astronomical norms in America.
+The interview also makes clear that Cuban is plenty busy these days with a project completely unrelated to any form of media. He's started a company that sells prescription drugs at prices that sharply undercut the astronomical norms in America.
 
 Fair enough. But we can all hold out hope on that social-media thing, can't we?
 
