--- a/2024/2024-10-06.md
+++ b/2024/2024-10-06.md
@@ -1,5 +1,5 @@
 # New subscriber content on the way
-## For the first time, I'll be doing an annual outlook and an Intro to Web3 webinar for paid subscribers.
+## I'm adding an annual outlook and an Intro to Web3 webinar for paid subscribers.
 
 ![A string of lightbulbs with one lit up](https://w3w.news/img/colin-2500.jpg)
 *Photo by [ColiN00B](https://pixabay.com/users/colin00b-346653/) via Pixabay*
@@ -16,9 +16,11 @@ This regular Sunday email blast will continue, but it will be strictly a bullete
 
 The general idea here is that I've been weighing some new options for w3w, both creatively and in terms of revenue, since the newsletter's migration to Substack in August.
 
-Now that I've learned a bit more about the new platform, I'm rolling out some of those ideas. I truly believe the changes describe above will preserve the things that people have told me they already love about w3w, while adding some exciting new elements to the mix as well.
+Now that I've learned a bit more about the new platform, I'm rolling out some of those ideas. I truly believe the changes described above will preserve the things that people have told me they already love about w3w. At the same time, I'm glad to add some new elements to the mix as well.
 
- _**I'm really looking forward to sharing the annual outlook and the Intro to Web3 content with paid subscribers. If those are of interest to you, [upgrade to a paid subscription today!](https://w3wnews.substack.com/subscribe?next=https%3A%2F%2Fw3wnews.substack.com%2Fp%2Fis-ether-really-an-altcoin-at-this&r=4a03qe)**_
+In particular, I see the annual outlook and intro webinars as great ways to emphasize the big picture, to help you cut through the noise of daily incremental developments in tech.
+
+ _**I hope you'll join me by [upgrading to a paid subscription today!](https://w3wnews.substack.com/subscribe?next=https%3A%2F%2Fw3wnews.substack.com%2Fp%2Fis-ether-really-an-altcoin-at-this&r=4a03qe)**_
 
 <!-- CTA on new subscriber offers. Link: https://w3wnews.substack.com/subscribe?next=https%3A%2F%2Fw3wnews.substack.com%2Fp%2Fis-ether-really-an-altcoin-at-this&r=4a03qe
 
@@ -30,11 +32,11 @@ Update w3w.news and the newsletter boilerplate with that link as well. We have b
 
 - **Bitcoin posted its strongest September in 11 years,** up [more than 7%](https://www.ibtimes.com/bitcoin-logs-best-september-performance-over-decade-3745092) for the month. An interest-rate cut by the Federal Reserve in the U.S. and stimulus spending by the Chinese government [propelled the rally](https://www.vaneck.com/us/en/blogs/digital-assets/matthew-sigel-vaneck-crypto-monthly-recap-for-september-2024/). Led by bitcoin, the broader token market's global valuation rose to $2.25 trillion at month end, up nearly 9%, according to [CoinMarketCap data](https://coinmarketcap.com/charts/). Ethereum was a notable laggard to the monthly rally, however, off 4%.
 
-- **OpenAI updates:** New valuation https://www.cnbc.com/2024/10/02/openai-raises-at-157-billion-valuation-microsoft-nvidia-join-round.html | Staff exits https://finance.yahoo.com/video/openai-leadership-exodus-why-management-120019058.html | Murati https://www.cnn.com/2024/09/25/tech/openai-technology-chief-mira-murati-leaving/index.html
+- **OpenAI closed a funding round** that valued the company [at $157 billion](https://www.cnbc.com/2024/10/02/openai-raises-at-157-billion-valuation-microsoft-nvidia-join-round.html), more than quintuple its price tag in 2023. However, the company has seen a round of executive departures lately that [concerns some management experts](https://finance.yahoo.com/video/openai-leadership-exodus-why-management-120019058.html). Among the notable exits: Chief Technology Officer [Mira Murati](https://www.cnn.com/2024/09/25/tech/openai-technology-chief-mira-murati-leaving/index.html).
 
 - **Binance founder Changpeng "CZ" Zhao** took to Twitter following [his recent release](https://news.google.com/read/CBMilwFBVV95cUxQWGUycTZkWFNDWHllQTB1bkIybm9KVzM2ODZOWFA3WmluVW1pMk5HR3p5SGtkaGN0UUhwT0FQemczbElxTHZkZE5vZ3ZVdnZqYk1rSi0tWEkwVzBMQ2VjbkNpai1ySVU2TlZEaS1QWmpRc2FkUk14SFc3OFRIcFRNSlRmeVVqcFZGZmZWWm9uMUJudDZJSGdJ?hl=en-US&gl=US&ceid=US%3Aen) from a four-month prison sentence in the U.S. In [a tweet](https://x.com/cz_binance/status/1840265403882152232) on Sept. 29, CZ said his post-prison plans aren't fully set yet. But the billionaire plans to continue investing in crypto and to spend a lot of time on Giggle Academy, an online education project.
 
-- **Crypto payments in focus:** Ripple received regulatory approval to offer token-based payments [in Dubai](https://www.benzinga.com/markets/cryptocurrency/24/10/41125099/ripple-receives-dubai-approval-for-blockchain-payment-services). Meanwhile, PayPal CEO Alex Chrisshas said in an [interview with Yahoo Finance](https://finance.yahoo.com/video/paypal-ceo-crypto-were-just-183001339.html) that he is bullish on crypto payments but has no interest in becoming an exchange that competes with the likes of Coinase.
+- **Crypto payments in focus:** Ripple received regulatory approval to offer token-based payments [in Dubai](https://www.benzinga.com/markets/cryptocurrency/24/10/41125099/ripple-receives-dubai-approval-for-blockchain-payment-services)... PayPal CEO Alex Chrisshas said in an [interview with Yahoo Finance](https://finance.yahoo.com/video/paypal-ceo-crypto-were-just-183001339.html) that he is bullish on crypto payments but has no interest in becoming an exchange that competes with the likes of Coinase.
 
 - **Donald Trump's new crypto project** World Liberty Financial began a [limited public release](https://www.theverge.com/2024/9/30/24258815/world-liberty-financial-accredited-investors-know-your-customer-trump), accepting signups from accredited U.S. investors and foreigners. Separately, [ProPublica reports](https://www.propublica.org/article/trump-media-truth-social-executives-ousted-devin-nunes) that Trump's media startup Truth Social has recently forced out several executives alleging mismanagement and retaliation by CEO and former congressman Devin Nunes.
 
