--- a/2024/2024-10-06.md
+++ b/2024/2024-10-06.md
@@ -4,7 +4,7 @@
 ![A string of lightbulbs with one lit up](https://w3w.news/img/colin-2500.jpg)
 *Photo by [ColiN00B](https://pixabay.com/users/colin00b-346653/) via Pixabay*
 
-**Today I'm excited to share some changes I'm making** to my publishing workflow, including new value-added content for paid subscribers [on Substack](https://w3wnews.substack.com/subscribe?next=https%3A%2F%2Fw3wnews.substack.com%2Fp%2Fis-ether-really-an-altcoin-at-this&r=4a03qe). I'm adding two new projects:
+**Today I'm excited to share some changes I'm making** to my publishing workflow, including new value-added content for paid subscribers [on Substack](https://w3wnews.substack.com/subscribe). I'm adding two new projects:
 
 - **Year in Review & 2025 Outlook:** For w3w's Founding Members, I'm working on a new package of content that will look back at this year's major developments and ahead to key tech trends that I see coming in the New Year. This will launch with a members-only webinar in December, complemented by a long-form report that will go out as a PDF. (Founding Members will get the slides from the webinar as well, of course.) If you want to get a jump on 2025's major developments in Bitcoin, Ethereum, AI, and other emerging technologies re-shaping the web, this option is for you!
 
@@ -20,13 +20,7 @@ Now that I've learned more about the new platform, I'm rolling out some of those
 
 In particular, I see the Annual Outlook and Intro to Web3 webinars as great ways to emphasize the big picture, to help you cut through the frenzy of daily incremental developments in tech.
 
- _**I hope you'll join me by [upgrading to a paid subscription today!](https://w3wnews.substack.com/subscribe?next=https%3A%2F%2Fw3wnews.substack.com%2Fp%2Fis-ether-really-an-altcoin-at-this&r=4a03qe)**_
-
-<!-- CTA on new subscriber offers. Link: https://w3wnews.substack.com/subscribe?next=https%3A%2F%2Fw3wnews.substack.com%2Fp%2Fis-ether-really-an-altcoin-at-this&r=4a03qe
-
-Update w3w.news and the newsletter boilerplate with that link as well. We have broken ones currently!!!! Argh!!!!!
-
--->
+ _**I hope you'll join me by [upgrading to a paid subscription](https://w3wnews.substack.com/subscribe) today! [Gift subscriptions](https://w3wnews.substack.com/subscribe?next=https%3A%2F%2Fw3wnews.substack.com%2Fp%2Fis-ether-really-an-altcoin-at-this&r=4a03qe&gift=true) and [discounted group rates](https://w3wnews.substack.com/subscribe?next=https%3A%2F%2Fw3wnews.substack.com%2Fp%2Fis-ether-really-an-altcoin-at-this&r=4a03qe&group=true) are also available if you want to buy for other people who will enjoy w3w's content.**_ 🙂 🎁 
 
 ### Week in Review: Sept. 29 to Oct. 5, 2024
 
