--- a/2024/2024-10-13.md
+++ b/2024/2024-10-13.md
@@ -72,8 +72,8 @@ education, philanthropy, or other areas.
 -->
 
 
-# tktk
-## tktktk
+# Week in Review
+## The latest news about Bitcoin, Ethereum, AI, and other emerging technologies re-shaping the web.
 
 ![Investor holding up a physical ether coin](https://w3w.news/img/eth-2048.jpg)
 *Unedited photo by Ivan Radic via [Flickr](https://www.flickr.com/people/26344495@N05/) under Creative Commons [license](https://creativecommons.org/licenses/by/2.0/).*
@@ -98,7 +98,7 @@ education, philanthropy, or other areas.
 
 -->
 
-### Week in Review: Oct. 6-12, 2024
+### Oct. 6-12, 2024
 
 - Google news searches... Blockchain: https://news.google.com/search?q=blockchain&hl=en-US&gl=US&ceid=US%3Aen | Crypto: https://news.google.com/search?q=crypto&hl=en-US&gl=US&ceid=US%3Aen | Web3: https://news.google.com/search?q=web3&hl=en-US&gl=US&ceid=US%3Aen
 
@@ -108,7 +108,7 @@ education, philanthropy, or other areas.
 
 ### Community
 
-- **Become a paid subscriber to w3w.** The newsletter offers several paid options, each with extra perks compared to the free tier. That includes access to comment on Substack, subscriber-only content posted there, and chat features. Plus you get my deepest gratitude and some good karma for supporting w3w. [Sign up today!](https://w3wnews.substack/subscribe) ☯️ 😉  
+- **Become a paid subscriber to w3w.** The newsletter offers several paid options, each with extra perks compared to the free tier. That includes access to comment on Substack, subscriber-only content posted there, and chat features. Plus you get my deepest gratitude and some good karma for supporting w3w. [Sign up today!](https://w3wnews.substack.com/subscribe) ☯️ 😉  
 
 <!--
 
