--- a/2024/2024-10-06.md
+++ b/2024/2024-10-06.md
@@ -1,4 +1,4 @@
-# New subscriber content on the way
+# New paid content in the works
 ## I'm adding an Annual Outlook and an Intro to Web3 webinar for paid subscribers.
 
 ![A string of lightbulbs with one lit up](https://w3w.news/img/colin-2500.jpg)
@@ -20,7 +20,7 @@ Now that I've learned more about the new platform, I'm rolling out some of those
 
 In particular, I see the Annual Outlook and Intro to Web3 webinars as great ways to emphasize the big picture, to help you cut through the frenzy of daily incremental developments in tech.
 
- _**I hope you'll join me by [upgrading to a paid subscription](https://w3wnews.substack.com/subscribe) today! [Gift subscriptions](https://w3wnews.substack.com/subscribe?next=https%3A%2F%2Fw3wnews.substack.com%2Fp%2Fis-ether-really-an-altcoin-at-this&r=4a03qe&gift=true) and [discounted group rates](https://w3wnews.substack.com/subscribe?next=https%3A%2F%2Fw3wnews.substack.com%2Fp%2Fis-ether-really-an-altcoin-at-this&r=4a03qe&group=true) are also available if you want to buy for other people who will enjoy w3w's content.**_ 🙂 🎁 
+ _**I hope you'll join me by [upgrading to a paid subscription](https://w3wnews.substack.com/subscribe) today! [Gift subscriptions](https://w3wnews.substack.com/subscribe?next=https%3A%2F%2Fw3wnews.substack.com%2Fp%2Fis-ether-really-an-altcoin-at-this&r=4a03qe&gift=true) and [discounted group rates](https://w3wnews.substack.com/subscribe?next=https%3A%2F%2Fw3wnews.substack.com%2Fp%2Fis-ether-really-an-altcoin-at-this&r=4a03qe&group=true) are also available if you want to buy for other people who will enjoy w3w's content.**_ 🙂 🎁
 
 ### Week in Review: Sept. 29 to Oct. 5, 2024
 
