--- a/2024/2024-10-06.md
+++ b/2024/2024-10-06.md
@@ -1,5 +1,5 @@
 # New paid content in the works
-## I'm adding an Annual Outlook and an Intro to Web3 webinar for paid subscribers.
+## To add value for subscribers, I'll be launching an Annual Outlook and an Intro to Web3 webinar soon.
 
 ![A string of lightbulbs with one lit up](https://w3w.news/img/colin-2500.jpg)
 *Photo by [ColiN00B](https://pixabay.com/users/colin00b-346653/) via Pixabay*
