--- a/2024/2024-10-13.md
+++ b/2024/2024-10-13.md
@@ -1,126 +1,45 @@
-<!--
-
-Social shares: Some evergreens...
-
-- Web3 projects need ongoing PR: https://hackernoon.com/why-web3-projects-need-ongoing-pr-to-stay-relevant-the-promise-vs-the-reality?source=rss
-
-- **ICYMI:** Australia is leading the world in growth of adoption for crypto ATMs.  https://bitcoinist.com/australia-dominates-crypto-atm-market-with-16x-growth/
-
-- Diddy among the people who helped finance Musk's Twitter buyout: https://finance.yahoo.com/news/sean-diddy-combs-revealed-investor-010000475.html
-
-- - https://www.msn.com/en-us/foodanddrink/foodnews/i-just-learned-what-paprika-is-really-made-from-and-i-need-to-lie-down/ar-AA1qjsU0?ocid=hpmsn&cvid=7d798e139210446694cfed68e63e9360&ei=21
-
-
-
-
-- Firsthand Asheville, NC story: https://slate.com/life/2024/10/asheville-floods-trees-art-damage-death-dams.html
-
-
-
--->
-
-<!--
-
-Other candidates...
-
-- Stellar Development Foundation helping with aid to Ukraine, etc. Story covered by
-
-- Wassup with these crazy parties? ([](https://fortune.com/crypto/2024/10/01/token2049-kavita-gupta-delta-blockchain-crypto-boom-economy-bubble/))
-
-- Pew numbers on crypto: https://www.pewresearch.org/short-reads/2023/04/10/majority-of-americans-arent-confident-in-the-safety-and-reliability-of-cryptocurrency/
-
-- Federal Reserve report on US housholds' financial well-being, including stats on crypto ownership. https://www.federalreserve.gov/publications/files/2023-report-economic-well-being-us-households-202405.pdf
-
-
--->
-
-<!--
-
-Leftovers from last week...
-
-
-- **BlackRock's spot exchange-traded fund holding ether** on investors' behalf topped a $1 billion valuation for the first time. ([]())
-
-- **Transaction fees on the Ethereum network,** known as gas, were sharply higher last week due to surging activity. An analysis by Coinbase showed that the average gas price in the 10-day period from Sept. 16-26 was up nearly 500% from the the preceding 30-day average. ([The Block](https://www.theblock.co/post/318450/ethereum-transaction-fees-surge-as-blockchain-activity-ramps-up-coinbase))
-
-- Harris crypto remarks...
-
-education, philanthropy, or other areas.
-
-- Sandvine: https://www.msn.com/en-us/money/other/sandvine-to-exit-dozens-of-countries-replace-ceo-in-overhaul/ar-AA1qUu7t
-
-- https://www.coindesk.com/tech/2024/09/24/sky-pauses-plan-to-offboard-wrapped-bitcoin-after-chat-with-bitgos-belshe/
-
-- https://www.ftc.gov/news-events/news/press-releases/2024/09/ftc-staff-report-finds-large-social-media-video-streaming-companies-have-engaged-vast-surveillance
-
-- Crypto should have a purple mindset: https://www.coindesk.com/opinion/2024/09/23/crypto-needs-a-purple-mindset/
-
-- Google files antitrust complaint against Microsoft. ([Wall Street Journal](https://www.wsj.com/tech/google-files-eu-antitrust-complaint-against-microsoft-cfcd99bb?st=h2FTmJ&reflink=desktopwebshare_permalink))
-
-- WSJ on possible Harris appointees:  https://www.msn.com/en-us/news/politics/who-could-serve-in-harris-s-cabinet/ar-AA1pezOV
-
-- Sheila Warren on Dems shifting on crypto: https://www.coindesk.com/opinion/2024/09/24/how-democrats-have-shifted-on-crypto/
-
-- https://www.salon.com/2024/09/24/crypto-industry-spends-38-million-to-help-ohios-bernie-moreno-flip-the-senate-to/?in_brief=true
-
-- The death of Peter Thiel's boyfriend is being investigated as a suicide by Miami police. ([The Intercept]()) <!-- Link TK
-
-- Bloomberg Crypto ([](https://www.youtube.com/results?search_query=bloomberg+crypto&sp=EgIIAg%253D%253D))
-
-- JPMorgan says IPO market is strong right now. https://finance.yahoo.com/news/jpmorgan-says-ipo-market-pe-171600259.html
-
--->
-
-
 # Week in Review
 ## The latest news about Bitcoin, Ethereum, AI, and other emerging technologies re-shaping the web.
 
-![Investor holding up a physical ether coin](https://w3w.news/img/eth-2048.jpg)
-*Unedited photo by Ivan Radic via [Flickr](https://www.flickr.com/people/26344495@N05/) under Creative Commons [license](https://creativecommons.org/licenses/by/2.0/).*
+### October 6-12, 2024
 
-<!-- Lede item: Should run ~450 words. A few possibilities...
+- **America's Department of Justice offered new details** about how it plans to end Google's search monopoly following DOJ's recent win in an antitrust suit against the giant. Possible remedies could include mandated data sharing with competitors or even an outright breakup of Google, according to a new court filing. ([Gizmodo](https://gizmodo.com/doj-reveals-its-plan-for-breaking-up-googles-search-monopoly-2000509815))
 
-- PREZ: Check in on U.S. presidential race. https://cointelegraph.com/news/crypto-us-election-issue-first-time-history-gemini | Axios reports on a crypto "civil war":
+- **The Solana network is dominating token launches this year.** It has been the platform for 87% of token debuts in 2024, fueled largely by issuance of memecoins, according to data from [The Block](https://www.theblock.co/post/319875/solana-dominates-token-launches-accounting-for-over-87-of-new-tokens-in-2024).
 
-- EVERYONEISWRONG: Blockchain people are getting things spectacularly wrong about politics and vice versa. https://www.sfgate.com/politics/article/kamala-harris-enigmatic-bay-area-billionaire-19792757.php
+- **Market scoreboard:** Wall Street has been on a two-year bull run, including a new record in the benchmark S&P 500 on Friday. But the stock market's 60% gain over the last two years is still dwarfed by bitcoin's 220% rise. ([Decrypt](https://decrypt.co/285872/wall-street-bull-run-bitcoin-dominates))
 
-- NEWMANTRA: A newsletter about emerging tech, for newbies and OGs alike. Emerging tech made accessible.
+- **MicroStrategy has ambitions to become a bitcoin bank**, according to analysts at Bernstein Research. The company, which was founded in 1989 as a tech consultancy, has accumulated $16 billion in bitcoin so far. ([Decrypt](https://decrypt.co/285838/microstrategy-bitcoin-bank-trillion-dollar))
 
-- 2USECASES: Signin/privacy and payments are two killer cases that most apps outside of Big Tech ought to be using.
+- **More FTX fallout:** A federal bankruptcy judge [approved](https://www.theblock.co/post/319909/us-bankruptcy-judge-approves-ftx-reorganization-plan-two-years-after-the-exchanges-collapse) the defunct exchange's final plan to reorganize, effectively ending its Chapter 11 proceeding. Customers are slated to receive nearly $7 billion in repayment. Separately, former FTX executive Ryan Salame, who led the company's political lobbying, [reported to a federal prison](https://edition.cnn.com/2024/10/11/business/ryan-salame-ftx-linkedin-profile-prison-intl-scli/index.html) in Maryland to begin a sentence of 7-1/2 years for making illegal campaign contributions. Weirdly, he also [updated](https://www.linkedin.com/in/ryansalame/recent-activity/all/) his LinkedIn profile to note that he is starting a new "full-time position" as an inmate. And he gave a [lengthy interview](https://unchainedcrypto.com/podcast/ftxs-ryan-salame-is-going-to-prison-heres-what-he-has-to-say/) to podcaster Laura Shin. 
 
-- 4PART: The token market can safely be broken down into several categories -- bitcoin, ethereum, major stablecoins, and everything else. Here's why that matters.
+- **The deadline for repayments to Mt. Gox customers** who lost money in a notorious hack of the exchange has been pushed back a year. ([The Block](https://www.theblock.co/post/320746/mt-gox-pushes-repayment-deadline-to-2025))
 
-- STRING: See page at https://www.notion.so/String-b5f6d8f2bb6f4eacb96c95276dc242bb
+- **Wikipedia has launched a new effort dubbed WikiProject AI Cleanup** "to combat the increasing problem of unsourced, poorly written AI-generated content." As always, they need volunteers to help. If that's of interest, you can get involved by adding yourself as a participant or making other edits to [the project's homepage](https://en.wikipedia.org/wiki/Wikipedia:WikiProject_AI_Cleanup). 🙏
 
-- SANEWASHING: I don't want to do that with crypto markets. Bitboy vs Professor Crypto. Lord... OTOH the mainstream press does it with Wall Street all the time.
+- **Congrats!** Legendary web developer Dave Winer's personal site, which is generally considered the first blog on the web, marked its 30th anniversary [on Monday](http://scripting.com/2024/10/07.html). The Guardian's John Naughton wrote [a nice column](http://scripting.com/2024/10/07.html) about the milestone and Dave's rich legacy as a media innovator.
 
-- POCCRYPTO: POC overindex on ownership of crypto.
+- **The gaming protocol Elympics** published a wide-ranging [research report](https://static.elympics.cc/reports/Global-Gaming-Report-2024_Elympics_BGA_PlayToEarn.pdf) including results of a survey of 1,000 web3 gamers, case studies of specific games, and other datapoints about the industry.
 
--->
+- **The NEAR Protocol patched a bug** that could have allowed an attacker to crash every node on the network. ([Cointelegraph](https://cointelegraph.com/news/near-patche-web3-ping-vulnerability))
 
-### Oct. 6-12, 2024
+- **A Nigerian judge declined to set bail** for Binance executive Tigran Gambaryan despite his lawyers' pleas for lenience based on Gambaryan's health. ([CoinDesk](https://www.coindesk.com/policy/2024/10/11/binance-executive-tigran-gambaryan-denied-bail-in-nigeria/))
 
-- Google news searches... Blockchain: https://news.google.com/search?q=blockchain&hl=en-US&gl=US&ceid=US%3Aen | Crypto: https://news.google.com/search?q=crypto&hl=en-US&gl=US&ceid=US%3Aen | Web3: https://news.google.com/search?q=web3&hl=en-US&gl=US&ceid=US%3Aen
+- **Ethereum founder Vitalik Buterin donated $182,000** in proceeds from the memecoin Moo Deng to a charity that helps fight airborne diseases. ([The Block](https://www.theblock.co/post/319810/vitalik-buterin-moo-deng-memecoin-help-fight-airborne-diseases))  
 
-- tk
-
-- tk
+- **Wen virtual Lambo?** Automobili Lamborghini and Animoca Brands announced a partnership to bring the iconic Italian luxury vehicles into the metaverse as tradable digital assets. The project will launch in November. ([Blockworks](https://blockworks.co/news/lamborghinis-are-coming-to-the-metaverse))
 
 ### Community
 
-- **Become a paid subscriber to w3w.** The newsletter offers several paid options, each with extra perks compared to the free tier. That includes access to comment on Substack, subscriber-only content posted there, and chat features. Plus you get my deepest gratitude and some good karma for supporting w3w. [Sign up today!](https://w3wnews.substack.com/subscribe) ☯️ 😉  
-
-<!--
-
-- Add BTC addy...
-
-- QR code is here. <!-- Create image, upload to https://w3w.news/btc-tipjar ->
-
--->
+- **We have some great exclusive content coming** over the next few months for paid subscribers to w3w. For Founding Members, I'm woring on Year in Review & 2025 Outlook that will go out in December covering important trends to look for in emerging tech. At all paid tiers, I'll also be offering an Intro to Web3 webinar to cover the basics of decentralization. Don't miss out! [Upgrade to a paid subscription today.](https://w3wnews.substack.com/subscribe)   
 
 ### Odds & Ends
 
-- "I feel like the more I watch videos of cooking, the more I’m convinced I have no idea how to peel, boil, drain, or cut anything the 'right' way." -- [@alischwanke](https://x.com/alischwanke/status/1838734711679488454)
+- **Scammy QR codes for parking** are now a Thing. Sigh. ([Salon](https://www.salon.com/2024/10/06/fake-qr-parking-codes-are-the-latest-scam-how-to-detect-them/))
+
+- **A team of federal wildlife officials, local residents, and conservationists** has spent several months hunting a single rat loose on remote St. Paul Island, Alaska. They're worried it could wreak havoc on the nests of small seabirds. ([Washington Post](https://www.washingtonpost.com/nation/2024/10/11/alaska-rat-hunt-st-paul-island/))
+
+- **Duh.** In preparation for National Album Day next wekeend, BBC Radio 2 conducted a listener poll to name the Ultimate British Group of all time. The Beatles topped [the list](https://www.bbc.com/mediacentre/2024/radio-2-ultimate-british-group-result).
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
