Edits to headline and body copy for clarity.

--- a/2024/2024-10-13.md
+++ b/2024/2024-10-13.md
@@ -1,7 +1,7 @@
 # Week in Review
-## The latest news about Bitcoin, Ethereum, AI, and other emerging technologies re-shaping the web.
+## October 6-12, 2024
 
-### October 6-12, 2024
+The latest news about emerging technologies re-shaping the web:
 
 - **America's Department of Justice offered new details** about how it plans to end Google's search monopoly following DOJ's recent win in an antitrust suit against the giant. Possible remedies could include mandated data sharing with competitors or even an outright breakup of Google, according to a new court filing. ([Gizmodo](https://gizmodo.com/doj-reveals-its-plan-for-breaking-up-googles-search-monopoly-2000509815))
 
@@ -11,7 +11,7 @@
 
 - **MicroStrategy has ambitions to become a bitcoin bank**, according to analysts at Bernstein Research. The company, which was founded in 1989 as a tech consultancy, has accumulated $16 billion in bitcoin so far. ([Decrypt](https://decrypt.co/285838/microstrategy-bitcoin-bank-trillion-dollar))
 
-- **More FTX fallout:** A federal bankruptcy judge [approved](https://www.theblock.co/post/319909/us-bankruptcy-judge-approves-ftx-reorganization-plan-two-years-after-the-exchanges-collapse) the defunct exchange's final plan to reorganize, effectively ending its Chapter 11 proceeding. Customers are slated to receive nearly $7 billion in repayment. Separately, former FTX executive Ryan Salame, who led the company's political lobbying, [reported to a federal prison](https://edition.cnn.com/2024/10/11/business/ryan-salame-ftx-linkedin-profile-prison-intl-scli/index.html) in Maryland to begin a sentence of 7-1/2 years for making illegal campaign contributions. Weirdly, he also [updated](https://www.linkedin.com/in/ryansalame/recent-activity/all/) his LinkedIn profile to note that he is starting a new "full-time position" as an inmate. And he gave a [lengthy interview](https://unchainedcrypto.com/podcast/ftxs-ryan-salame-is-going-to-prison-heres-what-he-has-to-say/) to podcaster Laura Shin. 
+- **More FTX fallout:** A federal bankruptcy judge [approved](https://www.theblock.co/post/319909/us-bankruptcy-judge-approves-ftx-reorganization-plan-two-years-after-the-exchanges-collapse) the defunct exchange's final plan to reorganize, effectively ending its Chapter 11 proceeding. Customers are slated to receive nearly $7 billion in repayment. Separately, former FTX executive Ryan Salame, who led the company's political lobbying, [reported to a federal prison](https://edition.cnn.com/2024/10/11/business/ryan-salame-ftx-linkedin-profile-prison-intl-scli/index.html) in Maryland to begin a sentence of 7-1/2 years for making illegal campaign contributions. Weirdly, he also [updated](https://www.linkedin.com/in/ryansalame/recent-activity/all/) his LinkedIn profile to note that he is starting a new "full-time position" as an inmate. And he gave a [lengthy interview](https://unchainedcrypto.com/podcast/ftxs-ryan-salame-is-going-to-prison-heres-what-he-has-to-say/) to podcaster Laura Shin.
 
 - **The deadline for repayments to Mt. Gox customers** who lost money in a notorious hack of the exchange has been pushed back a year. ([The Block](https://www.theblock.co/post/320746/mt-gox-pushes-repayment-deadline-to-2025))
 
