--- a/2024/2024-10-13.md
+++ b/2024/2024-10-13.md
@@ -1,13 +1,13 @@
 # Week in Review
 ## October 6-12, 2024
 
-The latest news about emerging technologies re-shaping the web:
-
-- **The Solana network is dominating token launches this year.** It has been the platform for 87% of token debuts in 2024, fueled largely by issuance of memecoins, according to data from [The Block](https://www.theblock.co/post/319875/solana-dominates-token-launches-accounting-for-over-87-of-new-tokens-in-2024).
+**Sometimes it's just unavoidable** to talk about what's wrong with web2 before getting into all the potential fixes. That's definitely the case with the latest batch of notable headlines in tech:
 
 - **America's Department of Justice offered new details** about how it plans to end Google's search monopoly following DOJ's recent win in an antitrust suit against the giant. Possible remedies could include mandated data sharing with competitors or even an outright breakup of Google, according to a new court filing. ([Gizmodo](https://gizmodo.com/doj-reveals-its-plan-for-breaking-up-googles-search-monopoly-2000509815))
 
 - **Market scoreboard:** Wall Street has been on a two-year bull run, including a new record in the benchmark S&P 500 on Friday. But the stock market's 60% gain over the last two years is still dwarfed by bitcoin's 220% rise. ([Decrypt](https://decrypt.co/285872/wall-street-bull-run-bitcoin-dominates))
+
+- **The Solana network is dominating token launches this year.** It has been the platform for 87% of token debuts in 2024, fueled largely by issuance of memecoins, according to data from [The Block](https://www.theblock.co/post/319875/solana-dominates-token-launches-accounting-for-over-87-of-new-tokens-in-2024).
 
 - **MicroStrategy has ambitions to become a bitcoin bank**, according to analysts at Bernstein Research. The company, which was founded in 1989 as a tech consultancy, has accumulated $16 billion in bitcoin so far. ([Decrypt](https://decrypt.co/285838/microstrategy-bitcoin-bank-trillion-dollar))
 
