--- a/2024/2024-10-20.md
+++ b/2024/2024-10-20.md
@@ -20,6 +20,8 @@
 
 - QR code is here. <!-- Create image, upload to https://w3w.news/btc-tipjar ->
 
+- Promote gift subs...
+
 -->
 
 ### Odds & Ends
