Updating Oct '24 drafts

--- a/2024/2024-10-20.md
+++ b/2024/2024-10-20.md
@@ -1,33 +1,42 @@
 # Week in Review
 ## Oct. 13-19, 2024
 
-<!-- ![Investor holding up a physical ether coin](https://w3w.news/img/eth-2048.jpg)
-*Unedited photo by Ivan Radic via [Flickr](https://www.flickr.com/people/26344495@N05/) under Creative Commons [license](https://creativecommons.org/licenses/by/2.0/).* -->
+![Ethereum founder Vitalik Buterin](https://w3w.news/img/vitalik1920.jpg)
+*Ethereum founder Vitalik Buterin unveiled potential followup measures to 2022's major network upgrade, dubbed The Merge. Cropped file photo via Wikimedia Communs under Creative Commons [license](https://creativecommons.org/licenses/by/2.0/deed.en).*
 
-- Google news searches... Blockchain: https://news.google.com/search?q=blockchain&hl=en-US&gl=US&ceid=US%3Aen | Crypto: https://news.google.com/search?q=crypto&hl=en-US&gl=US&ceid=US%3Aen | Web3: https://news.google.com/search?q=web3&hl=en-US&gl=US&ceid=US%3Aen
+**The latest headlines** about emerging technologies, trends, and ideas transforming the web:
 
-- tk
+- **Ethereum creator Vitalik Buterin proposed big changes** to the network in a [new blog post](https://vitalik.eth.limo/general/2024/10/14/futures1.html), including lowered barriers for staking and faster confirmations for on-chain transactions. Buterin's proposals all seek to [build upon](https://decrypt.co/286233/ethereum-creator-vitalik-buterin-huge-changes) the major upgrade two years ago known as The Merge. They also come at a time when some members of Ethereum's open-source community are [concerned](https://www.coindesk.com/opinion/2024/10/11/has-ethereum-lost-its-way/) it is losing ground as a decentralized app platform to Solana and other rivals.
 
-- tk
+- **Andreessen Horowitz released** the 2024 edition of its annual State of Crypto [report](https://a16zcrypto.com/posts/article/state-of-crypto-report-2024/). The firm estimates there are now about [617 million crypto owners](https://qz.com/crypto-activity-has-soared-report-by-andreessen-horowit-1851674421) globally. But only 5-10% are active on a monthly basis, suggesting a major opportunity for platforms and companies to re-engage with past users who have gone dormant.
+
+- **Web3 startups raised $2 billion** across 300-plus deals in the third quarter, up 43% from the year-ago period. However, funding was down 13% compared to 2024's second quarter, the first decline so far this year. ([Crunchbase](https://news.crunchbase.com/web3/venture-funding-recap-blockchain-crypto-q3-2024/))
+
+- **Market updates:** Riskier assets includng stocks and crypto continued their recent winning streak, helped along by lower borrowing costs in the U.S. and strong corporate earnings. As of Saturday evening in New York, bitcoin posted a 7-day gain of 8% and ether was up 7%. On Wall Street, the stock market rose [for a sixth straight week](https://www.cnbc.com/2024/10/17/stock-market-today-live-updates.html), including fresh records in the S&P 500 and the Dow Jones Industrial Average at Friday's close. But gold also [hit a new record](https://finance.yahoo.com/news/gold-touches-new-high-to-hold-above-2700-per-ounce-172934670.html) above $2,700 per troy ounce in New York -- traditionally a sign that some investors are concerned about potential economic turbulence ahead.
+
+- **North America's role as a bitcoin hub** has [grown in 2024](https://news.google.com/read/CBMi1AFBVV95cUxNUGVqRzkxX2VMV1lJOGhPZEtrOGU5cGdZMVJLMVUxbnVfY1hJN3FRaHhSbXdkcl9XTEJrZHFSS3VRMW82S2ZyQ1JqYnlXbzd0cE9TdmFDYTlhTGNmZ0kwbzBkelZYd1JrY1BSamludFl6TnZGWEdCdkR4Nk5HcUlGY0pMbVRFcGRzSnVMWUtvNUZGT096OHlPdWJNUnVvWXo4c1Vackg1RU9sY0ZrU1duTVhfTDNRYnNMVDlRMlptZEZzekZ0Qk5Gd3daN0V2MFktbnY4dg?hl=en-US&gl=US&ceid=US%3Aen) thanks to Wall Street's launch of exchange-traded funds holding BTC on investors' behalf. Excluding Mexico, the continent now makes up 22.5% of global crypto activity, with an estimated $1.3 trillion in on-chain value, according to this year’s “Geography of Cryptocurrency” [report](https://www.chainalysis.com/wp-content/uploads/2024/06/the-2023-geography-of-cryptocurrency-report-release.pdf) from Chainalysis.
+
+- **On-chain data show that Tesla has moved $765 million in bitcoin** to previously unknown wallets. The transfer could signal that the automaker, which is currently the fourth-largest BTC holder among listed U.S. companies, is on the verge of selling. ([Fortune](https://finance.yahoo.com/news/tesla-moves-765-million-bitcoin-154358084.html))
+
+- **Crypto remains a hot political issue** heading into America's election Nov. 5. Kamala Harris announced a new, [investor-focused plan](https://www.benzinga.com/markets/cryptocurrency/24/10/41319364/kamala-harris-unveils-crypto-regulatory-framework-as-part-of-outreach-toward-black-male-vo) for crypto regulation as part of her "Opportunity Agenda for Black Men"... **The launch of World Liberty Financial,** a DeFi platform promoted by Donald Trump, [flopped](https://www.theblock.co/post/321638/crypto-pundits-decry-world-liberty-financials-lackluster-sales-calling-it-a-meme-masquerading-as-a-utility-project). The first day of trading saw less than $10 million in sales of the platform's WLFI token, well short of backers' goal to raise $300 million... **Congressional races** are seeing heavy buying of TV ads funded by crypto-industry donors for their favored candidates, most of them Republicans. But those ads often [don't mention crypto-related issues](https://www.politico.com/news/2024/10/15/crypto-election-ads-fairshake-00183700) explicitly... **On the prediction platform Polymarket,** betting activity on the U.S. presidential race [crossed the $2 billion milestone](https://www.theblock.co/post/321725/polymarket-betting-volume-for-us-presidential-election-winner-crosses-2-billion). Participants currently see Trump as the favorite, with a 60% chance of victory as of Friday. But the Wall Street Journal reports [Polymarket is investigating](https://www.wsj.com/finance/betting-election-pro-trump-ad74aa71?st=dJX1Td&reflink=desktopwebshare_permalink) a flurry of activity from just four accounts that may have skewed the broader market in Trump's favor.
+
+- **Polkadot announced a new partnership** with Banxa, a fiat-to-crypto gateway, and Polimec, a decentralized fundraising protocol, to allow users to make on-chain investments using credit cards. ([CoinTrust](https://www.cointrust.com/market-news/polkadot-partners-with-banxa-and-polimec-to-simplify-web3-investments))
+
+- **America's Treasury Department estimates** that AI has helped detect $4 billion in financial fraud so far this year. ([Decrypt](https://decrypt.co/287141/machine-learning-ai-us-treasury))
+
+- **Nevertheles, scammers gonna scam, yo.** The FBI [arrested](https://www.coindesk.com/policy/2024/10/17/fbi-arrests-alleged-sec-hacker-linked-to-fake-tweet-saying-bitcoin-etfs-were-approved/) a 25-year-old Alabama man in connection with the hack of the U.S. Securities and Exchange Commission's Twitter/X account, which falsely claimed on Jan. 9 that the agency had approved exchange-traded funds holding bitcoin. In fact, approval came the next day... **The Ethereum restaking protocol EigenLayer** confirmed it [suffered a similar hack](https://decrypt.co/287159/eigenlayer-twitter-hack-airdrop-scam) Friday in which someone used its official Twitter/X account to promote an airdrop scam... **The U.S. Justice Department indicted** former Olympic snowboarder Ryan Wedding and 15 other defendents for allegedly running a multi-billion dollar [international cocaine-trafficking ring](https://decrypt.co/287204/olympic-snowboarder-tether-cocaine-murders) that used Tether to launder money. Wedding is currently on the run... **One of the largest bitcoin heists** in U.S. history, involving $230 million in stolen tokens, appears to have been [busted up](https://www.msn.com/en-us/money/news/crypto-crooks-kidnapping-huge-bar-bills-and-exotic-cars-are-linked-to-one-of-biggest-bitcoin-thefts-in-us-history/ar-AA1ssaun), in part because the suspects also carjacked a Connecticut couple. Yikes.
 
 ### Community
 
-- **Become a paid subscriber to w3w.** The newsletter offers several paid options, each with extra perks compared to the free tier. That includes access to comment on Substack, subscriber-only content posted there, and chat features. Plus you get my deepest gratitude and some good karma for supporting w3w. [Sign up today!](https://w3wnews.substack.com/subscribe) ☯️ 😉  
-
-<!--
-
-- Add BTC addy...
-
-- QR code is here. <!-- Create image, upload to https://w3w.news/btc-tipjar ->
-
-- Promote gift subs...
-
--->
+- **We have some great exclusive content coming** over the next few months for paid subscribers to w3w. For Founding Members, I'm working on Year in Review & 2025 Outlook that will go out in December covering important trends to look for in emerging tech. At all paid tiers, I'll also be offering an Intro to Web3 webinar to cover the basics of decentralization. Don't miss out! [Upgrade to a paid subscription today.](https://w3wnews.substack.com/subscribe)   
 
 ### Odds & Ends
 
-- tk
-- tk
+- **Cuba's electrical grid is collapsing.** Astonishingly, some combination of communism and U.S. sanctions to combat it appears to be [at fault](https://www.nbcnews.com/news/latino/cuba-power-outage-rcna176227), not bitcoin. #sarcasm
+
+- **The King's NFTs:** A collection of 1,935 officially licensed artworks depicting Elvis Presley are being inscribed as Ordinals, a type of non-fungible token on the Bitcoin network. ([CoinDesk](https://www.coindesk.com/tech/2024/10/17/jailhouse-block-elvis-digital-art-collection-inscribed-on-the-bitcoin-network/))
+
+- **The Meme Machine,** a beat-up Honda Civic, has become a symbol of European crypto culture. ([Decrypt](https://decrypt.co/286679/meme-machine-honda-crypto-europe))
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
