Updating Oct '24 drafts

--- a/2024/2024-10-27.md
+++ b/2024/2024-10-27.md
@@ -1,75 +1,54 @@
-<!--
+# America's "crypto election" enters the home stretch
+## Week in Review: Oct. 20-26, 2024
 
-Some leftovers. Perhaps use this to riff on for blog or social posts:
+![A pile of political buttons referencing U.S. political parties](https://w3w.news/img/marek-studzinski-1920.jpg)
+*Photo by Marek Studzinski via Unsplash*
 
-- New RWA mainnet launches: https://www.theblock.co/post/321800/ostium-labs-a-startup-building-onchain-perpetuals-markets-for-traditional-assets-launches-mainnet
+<!-- ~100 words riffing on Axios article on the election... -->
 
-- WorldCoin re-branding: https://www.forbes.com/sites/richardnieva/2024/10/17/sam-altmans-worldcoin-world-rebrand/ | https://techcrunch.com/2024/10/17/sam-altmans-worldcoin-becomes-world-and-shows-new-iris-scanning-orb-to-prove-your-humanity/
+**Vox's Whizy Kim offered** some eye-popping stats in [a recent post](https://www.vox.com/money/371597/crypto-politics-spending-2024-elections-trump) about crypto-industry donations to U.S. political campaigns:  
 
-- Games that pay BTC to play: https://decrypt.co/205392/bitcoin-booming-you-earn-more-playing-free-games
+*<blockquote>"Crypto has spent a record $119 million in the 2024 federal elections, magnitudes more than it has ever spent before. This huge number means that crypto accounts for almost half of all corporate political contributions in this cycle. Its spending since 2010, totaling $129 million, puts the industry second only to fossil fuels, according to a report from the progressive consumer advocacy group Public Citizen."</blockquote>*
 
-- New blockchain trilemma: https://www.coindesk.com/opinion/2024/10/18/the-new-blockchain-trilemma-is-here-and-its-not-about-technology/
+I should note: Those numbers were current as of mid-September, when Whizy's post was published. So the final tally on crypto donations will certainly be even higher by the time Americans go to the polls in person on Nov. 5.
 
-- https://www.theblock.co/post/322032/defi-can-complement-centralized-financial-systems-says-federal-reserves-christopher-waller
+One other crucial detail to keep in mind for now: The winner of the presidential race will likely *not* be settled on Election Night.
 
-- **Layoffs in Netflix's gaming unit.** https://www.businessinsider.com/netflix-shakes-up-gaming-division-new-epic-hire-layoffs-2024-10
+There are several demonstrable reasons for this, including the razor-thin margin of [U.S. public opinion](https://www.nytimes.com/2024/10/25/us/politics/poll-harris-trump-times-siena.html) concerning the two major candidates and our complex, frankly [antiquated](https://www.harvardmagazine.com/2020/07/why-do-we-still-have-the-electoral-college) state-by-state method of counting the vote. Axios just published an [excellent explainer](https://www.axios.com/2024/10/24/election-results-timing-vote-count) regarding the situation, if you're curious for fuller details
 
-- Kraken creates new version of wrapped bitcoin: https://decrypt.co/286934/wrapped-bitcoin-wars-kraken-kbtc
+In other words, America will eventually figure out who its president will be through a longstanding, transparent process. If there is no clear winner Election Night, that will be completely normal, not a sign of any shenanigans afoot.
 
-- Singapore's largest bank DBS launched a new RWA service: https://www.theblock.co/post/322019/the-daily-dbs-introduces-tokenized-banking-services-blackrocks-bitcoin-etf-attracts-1-billion-in-less-than-a-week-and-more
+If anyone claims otherwise, they're either nefarious themselves, an ignoramus, or both.
 
-- New web3 hotel: https://www.koreatimes.co.kr/www/nation/2024/10/602_384320.html
+### Week in Review
 
--->
+- **Booming usage of the decentralized betting platform Polymarket** this year has effectively increased adoption of the Polygon blockchain as well. But Polymarket's recent activity, largely driven by bets on the U.S. presidential race, has only translated to $27,000 in transaction fees to support the Polygon network. ([CoinDesk](https://www.coindesk.com/tech/2024/10/25/polymarket-is-huge-success-for-polygon-blockchain-everywhere-but-the-bottom-line/))
 
-<!--
-- New dGEN1 device. https://decrypt.co/287120/dgen1-mobile-device-launches-for-seamless-onchain-ethereum-transactions
+- **The Wall Street Journal reported** that the U.S. Justice Department is [investigating Tether](https://www.wsj.com/finance/currencies/federal-investigators-probe-cryptocurrency-firm-tether-a13804e5?st=of6sHg&reflink=desktopwebshare_permalink) for possible violations of anti-money-laundering rules and foreign sanctions.
 
-- https://venturebeat.com/games/yuga-labs-brings-ai-to-blockchain-with-apechain-creator-platform/
+- **Tether is currently the crypto market's leading stablecoin** and the number-three token overall, with a valuation of $120 billion. Hence concerns about its future kept the broader market in check. Bitcoin slipped 1%, and Ethereum fell 8% on the week, according to [CoinMarketCap](https://coinmarketcap.com/) data.
 
-- Andreesen funded AI becomes a millionaire: https://www.theblock.co/post/322002/marc-andreessen-funded-ai-bot-becomes-a-millionaire-after-fartcoin-holdings-rally
+- **Microsoft's board recommended** shareholders vote against a proposal for the software giant to explore potential investment in bitcoin. The issue will be decided at Microsoft's annual shareholder meeting Dec. 9. ([Decrypt](https://decrypt.co/288185/microsoft-asks-shareholders-vote-against-investing-bitcoin-sec-filing))
 
--->
-<!--
+- **Payments giant Stripe** bought stablecoin platform Bridge for $1.1 billion, the largest corporate acquisition in crypto so far this year. ([CoinMarketCap](https://finance.yahoo.com/news/stripe-acquires-stablecoin-platform-bridge-074714853.html))
 
-- Delay in Nigeria trial of Binance exec: https://decrypt.co/287207/jailed-binance-exec-trial-postponed-illness
+- **Coinbase Ventures announced** a new push to invest in startups at the intersection of crypto and AI. ([CNBC](https://www.msn.com/en-us/money/other/coinbase-ventures-lead-talks-about-fund-s-new-ai-and-crypto-investing-strategy/vi-AA1sRUdy))
 
--->
+- **Ethereum co-founder Vitalik Buterin** detailed a possible roadmap for reducing the number-two blockchain's "bloat" over time. His proposed plan would have each Ethereum node store a randomized 10% of the network's historical data, not a full copy, to reduce the requirements to operate a node. ([The Block](https://www.theblock.co/post/323176/vitalik-buterin-outlines-ways-to-reduce-ethereums-bloat-in-purge-upgrade-roadmap))
 
+- **Polkadot developer platform Apillon** introduced embedded wallets to streamline login for web3 apps, historically a big obstacle to mainstream adoption. ([Cryptonews](https://cryptonews.com/news/polkadot-developer-platform-launches-embedded-wallet-for-seamless-web3-login/))
 
-# Week in Review
-## Oct. 20-26, 2024
-
-<!-- ![Investor holding up a physical ether coin](https://w3w.news/img/eth-2048.jpg)
-*Unedited photo by Ivan Radic via [Flickr](https://www.flickr.com/people/26344495@N05/) under Creative Commons [license](https://creativecommons.org/licenses/by/2.0/).* -->
-
-- Google news searches... Blockchain: https://news.google.com/search?q=blockchain&hl=en-US&gl=US&ceid=US%3Aen | Crypto: https://news.google.com/search?q=crypto&hl=en-US&gl=US&ceid=US%3Aen | Web3: https://news.google.com/search?q=web3&hl=en-US&gl=US&ceid=US%3Aen
-
-- tk
-
-- tk
-
-- tk
+- **Ripple CEO Brad Garlinghouse** says an exchange-traded fund (ETF) in the U.S. on Ripple's XRP token akin to those recently listed for bitcoin and ether is "inevitable." ([CryptoGlobe](https://www.cryptoglobe.com/latest/2024/10/a-spot-etf-for-xrp-is-just-inevitable-says-ripple-ceo-brad-garlinghouse/))
 
 ### Community
 
-- **Become a paid subscriber to w3w.** The newsletter offers several paid options, each with extra perks compared to the free tier. That includes access to comment on Substack, subscriber-only content posted there, and chat features. Plus you get my deepest gratitude and some good karma for supporting w3w. [Sign up today!](https://w3wnews.substack.com/subscribe) ☯️ 😉  
-
-<!--
-
-- Add BTC addy...
-
-- QR code is here. <!-- Create image, upload to https://w3w.news/btc-tipjar ->
-
-- Promote gift subs...
-
--->
+- **We have some great exclusive content coming** over the next few months for paid subscribers to w3w. For Founding Members, I'm working on Year in Review & 2025 Outlook that will go out in December covering important trends to look for in emerging tech. At all paid tiers, I'll also be offering an Intro to Web3 webinar to cover the basics of decentralization. Don't miss out! [Upgrade to a paid subscription today.](https://w3wnews.substack.com/subscribe)   
 
 ### Odds & Ends
 
-- tk
+- **ProPublica's Ben Werdmuller** took to his personal blog to [share his vision](https://werd.io/2024/helping-to-build-the-open-social-web) of an open social web, built using what's sometimes called [fediverse](https://en.wikipedia.org/wiki/Fediverse) technology. [His post](https://werd.io/2024/helping-to-build-the-open-social-web) offers a great high-level overview for anyone who wants to get started with the fediverse, which is a crucial element of the broader decentralization movement.
 
-- tk
+- **Infosec expert Nina Jagannathan** offers some great tips for teaching kids about cybersecurity in [her latest post](https://www.salon.com/2024/10/21/how-to-teach-kids-about-cybersecurity/) for Salon.
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
